[UPDATE] snp accent and code genome.py

--- a/data/es/snp.yml
+++ b/data/es/snp.yml
@@ -2190,13 +2190,13 @@ rs2758331:
     - true
 rs2227956:
   AA:
-    - Probabilidades de desarrollar resistencia a la insulina cuando se exponían a ftalatos.
+    - Probabilidades de desarrollar resistencia a la insulina cuando se expon&iacute;an a ftalatos.
     - false
   AG:
     - Mayor probabilidad de desarrollar prediabetes cuando se exponen a ftalatos.
     - false
   GG:
-    - Probabilidades de desarrollar resistencia a la insulina cuando se exponían a ftalatos.
+    - Probabilidades de desarrollar resistencia a la insulina cuando se expon&iacute;an a ftalatos.
     - false
 rs2631367:
   CC:
